--- a/Multi-layer-perceptron.ipynb
+++ b/Multi-layer-perceptron.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,11 +503,15 @@
     "                 max_iter : int = 200,\n",
     "                 activation: Literal[\"bisig\", \"sigmoide\", \n",
     "                                     \"relu\", 'tanh', 'softmax'] = \"bisig\" , \n",
-    "                 verbose : bool = True) -> None:\n",
+    "                 ) -> None:\n",
     "        if isinstance(layers, tuple):\n",
     "            layers = list(layers)\n",
+    "        if 0. > lr > 1.:\n",
+    "            raise ValueError(\"Learning rate must be between 0 and 1\")\n",
     "\n",
-    "        self.verbose : bool = verbose\n",
+    "        if not (isinstance(layers, tuple) or isinstance(layers, list)):\n",
+    "            raise TypeError(\"layers input should be a tuple/list of Integers\")\n",
+    " \n",
     "        self.lr : float = lr\n",
     "        self.layers : tuple[int,] = layers\n",
     "        self.activation = activation\n",
@@ -573,7 +577,7 @@
     "        \n",
     "        gradient = paresd.map(self.activation_function.derivative)\n",
     "\n",
-    "        for i in range(len(self.layers) - 2, -1, -1):\n",
+    "        for i in reversed(range(len(self.layers) - 1)):\n",
     "            # print(i)\n",
     "            gradient = gradient.dot_multiply(err).\\\n",
     "                map(lambda x : x * self.lr)\n",
@@ -649,9 +653,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -663,7 +674,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [01:21<00:00,  1.22it/s]\n"
+      "100%|██████████| 100/100 [02:20<00:00,  1.40s/it]"
      ]
     },
     {
@@ -671,20 +682,27 @@
      "output_type": "stream",
      "text": [
       "---------------------\n",
-      "MLPNetWork(lr = 0.5, hidden_layers = (63, 10, 15, 20, 25, 30, 26),  iteration= 100, activator=bisig \n",
-      "MLPClassifier(activation='logistic', alpha=0.5,\n",
-      "              hidden_layer_sizes=(10, 15, 20, 25, 30), max_iter=100)\n"
+      "MLPNetWork(lr = 0.5, hidden_layers = (63, 100, 26),  iteration= 100, activator=sigmoide \n",
+      "MLPClassifier(activation='logistic', alpha=0.5, max_iter=100)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "# 10 , 15 , 20, 25, 30\n",
-    "Hidden_Layer : tuple[int,] = ( 10 , 15 , 20, 25, 30)\n",
+    "Hidden_Layer : tuple[int,] = ( 100, )\n",
+    "print(type(Hidden_Layer))\n",
     "# .1 , .2 , .3 , .4 , .5 , .6 , .7 , .8 , .9\n",
     "learning_rate : float = .5\n",
     "# 100 , 200 , 300 , 400 , 500 , 600 , 700 , 800 , 900 , 1000\n",
     "iteration : int = 100\n",
-    "active_function : Literal['bisig', 'sigmoide', 'relu', 'tanh', 'softmax'] = 'bisig'\n",
+    "active_function : Literal['bisig', 'sigmoide', 'relu', 'tanh', 'softmax'] = 'sigmoide'\n",
     "\n",
     "my_model = MLPNetWork(layers= Hidden_Layer,\n",
     "                      lr = learning_rate,\n",
@@ -707,20 +725,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My Model Evaluation on X_10:  0.04\n",
-      "My Model Evaluation on X_15:  0.04\n",
-      "My Model Evaluation on X_20:  0.04\n",
+      "My Model Evaluation on X_10:  0.62\n",
+      "My Model Evaluation on X_15:  0.65\n",
+      "My Model Evaluation on X_20:  0.5\n",
       "==================================\n",
-      "Sklearn Evaluation on X_10:   0.04\n",
-      "Sklearn Evaluation on X_15:   0.04\n",
-      "Sklearn Evaluation on X_20:   0.04\n"
+      "Sklearn Evaluation on X_10:   0.65\n",
+      "Sklearn Evaluation on X_15:   0.58\n",
+      "Sklearn Evaluation on X_20:   0.58\n"
      ]
     }
    ],
@@ -748,18 +766,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My prediction on X_10 :     [25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25]\n",
+      "My prediction on X_10 :     [0, 3, 16, 3, 5, 5, 8, 3, 19, 19, 10, 11, 15, 13, 16, 5, 8, 17, 6, 19, 16, 0, 7, 23, 24, 24]\n",
       "The true value of Y_10 is:  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n",
-      "My prediction on X_10 :     [25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 4, 25, 25, 25, 25, 25, 25, 25, 25, 25, 4, 25, 25, 25]\n",
+      "__________________________________\n",
+      "My prediction on X_10 :     [0, 3, 5, 14, 4, 5, 8, 21, 19, 19, 10, 11, 7, 13, 8, 3, 14, 7, 8, 19, 16, 24, 12, 23, 24, 24]\n",
       "The true value of Y_10 is:  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n",
-      "My prediction on X_10 :     [25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 4, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25]\n",
+      "__________________________________\n",
+      "My prediction on X_10 :     [0, 3, 16, 14, 18, 5, 8, 7, 19, 19, 10, 11, 10, 13, 16, 17, 8, 4, 5, 19, 6, 23, 7, 23, 8, 23]\n",
       "The true value of Y_10 is:  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n"
      ]
     }
@@ -767,9 +787,11 @@
    "source": [
     "print(f\"My prediction on X_10 :     {my_model.predict(X_10)}\")\n",
     "print(f\"The true value of Y_10 is:  {Y_10}\")\n",
+    "print(\"_\" *34)\n",
     "\n",
     "print(f\"My prediction on X_10 :     {my_model.predict(X_15)}\")\n",
     "print(f\"The true value of Y_10 is:  {Y_15}\")\n",
+    "print(\"_\" *34)\n",
     "\n",
     "print(f\"My prediction on X_10 :     {my_model.predict(X_20)}\")\n",
     "print(f\"The true value of Y_10 is:  {Y_20}\")"
@@ -777,18 +799,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sklearn prediction on X_10 : [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]\n",
+      "Sklearn prediction on X_10 : [0, 18, 2, 3, 4, 5, 16, 7, 19, 19, 10, 11, 23, 13, 14, 5, 16, 18, 18, 19, 20, 24, 7, 23, 8, 25]\n",
       "The true value of Y_10 is:   [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n",
-      "Sklearn prediction on X_10 : [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]\n",
+      "__________________________________\n",
+      "Sklearn prediction on X_10 : [0, 1, 2, 3, 4, 5, 14, 7, 19, 19, 10, 11, 22, 13, 16, 5, 16, 15, 18, 19, 3, 21, 0, 23, 24, 25]\n",
       "The true value of Y_10 is:   [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n",
-      "Sklearn prediction on X_10 : [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]\n",
+      "__________________________________\n",
+      "Sklearn prediction on X_10 : [0, 18, 2, 3, 4, 5, 16, 7, 19, 19, 10, 11, 18, 13, 2, 5, 16, 5, 18, 19, 11, 23, 1, 23, 24, 25]\n",
       "The true value of Y_10 is:   [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n"
      ]
     }
@@ -796,9 +820,11 @@
    "source": [
     "print(f\"Sklearn prediction on X_10 : {sklearn_model.predict(X_10).tolist()}\")\n",
     "print(f\"The true value of Y_10 is:   {Y_10}\")\n",
+    "print(\"_\" *34)\n",
     "\n",
     "print(f\"Sklearn prediction on X_10 : {sklearn_model.predict(X_15).tolist()}\")\n",
     "print(f\"The true value of Y_10 is:   {Y_15}\")\n",
+    "print(\"_\" *34)\n",
     "\n",
     "print(f\"Sklearn prediction on X_10 : {sklearn_model.predict(X_20).tolist()}\")\n",
     "print(f\"The true value of Y_10 is:   {Y_20}\")"
